// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductCard > renders placeholder when imageUrl is null > no-image-placeholder 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "aspectRatio": 0.75,
        }
      }
    >
      <View
        className="w-full h-full items-center justify-center bg-lavender-50"
        ref={null}
      >
        <Text
          className="text-heliotrope-400 text-3xl"
          ref={null}
        >
          📦
        </Text>
      </View>
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;

exports[`ProductCard > renders selected state with checkmark overlay > selected-checkmark 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "aspectRatio": 0.75,
        }
      }
    >
      <View
        cachePolicy="memory-disk"
        contentFit="cover"
        onError={[Function]}
        placeholder={
          {
            "blurhash": "L6PZfSi_.AyE_3t7t7R**0o#DgR4",
          }
        }
        ref={null}
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
        transition={300}
      >
        <Text
          testID="expo-image-uri"
        >
          https://cdn.example.com/selected.jpg
        </Text>
      </View>
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
      <View
        className="absolute top-2.5 right-2.5 w-6 h-6 bg-fuchsia-600 rounded-full items-center justify-center shadow-sm"
        ref={null}
      >
        <Text
          className="text-white text-xs font-bold"
          ref={null}
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;

exports[`ProductCard > renders with AI tagging indicator dot > with-ai-dot 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "aspectRatio": 0.75,
        }
      }
    >
      <View
        cachePolicy="memory-disk"
        contentFit="cover"
        onError={[Function]}
        placeholder={
          {
            "blurhash": "L6PZfSi_.AyE_3t7t7R**0o#DgR4",
          }
        }
        ref={null}
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
        transition={300}
      >
        <Text
          testID="expo-image-uri"
        >
          https://cdn.example.com/untagged.jpg
        </Text>
      </View>
      <View
        className="absolute top-2.5 right-2.5 w-2.5 h-2.5 rounded-full bg-fuchsia-500 border border-white"
        ref={null}
      />
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;

exports[`ProductCard > renders with a status badge > with-status-badge 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "aspectRatio": 0.75,
        }
      }
    >
      <View
        cachePolicy="memory-disk"
        contentFit="cover"
        onError={[Function]}
        placeholder={
          {
            "blurhash": "L6PZfSi_.AyE_3t7t7R**0o#DgR4",
          }
        }
        ref={null}
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
        transition={300}
      >
        <Text
          testID="expo-image-uri"
        >
          https://cdn.example.com/sold.jpg
        </Text>
      </View>
      <View
        className="absolute top-2.5 left-2.5 bg-tyrian-800/90 px-2.5 py-0.5 rounded-full shadow-sm"
        ref={null}
      >
        <Text
          className="text-white text-[10px] font-bold uppercase tracking-wider"
          ref={null}
        >
          SOLD
        </Text>
      </View>
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;

exports[`ProductCard > renders with all props combined > all-props-combined 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "aspectRatio": 0.75,
        }
      }
    >
      <View
        cachePolicy="memory"
        contentFit="cover"
        onError={[Function]}
        placeholder={
          {
            "blurhash": "L6PZfSi_.AyE_3t7t7R**0o#DgR4",
          }
        }
        ref={null}
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
        transition={300}
      >
        <Text
          testID="expo-image-uri"
        >
          https://cdn.example.com/full.jpg
        </Text>
      </View>
      <View
        className="absolute top-2.5 left-2.5 bg-tyrian-800/90 px-2.5 py-0.5 rounded-full shadow-sm"
        ref={null}
      >
        <Text
          className="text-white text-[10px] font-bold uppercase tracking-wider"
          ref={null}
        >
          RESERVED
        </Text>
      </View>
      <View
        className="absolute top-2.5 right-2.5 w-2.5 h-2.5 rounded-full bg-fuchsia-500 border border-white"
        ref={null}
      />
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
      <View
        className="absolute top-2.5 right-2.5 w-6 h-6 bg-fuchsia-600 rounded-full items-center justify-center shadow-sm"
        ref={null}
      >
        <Text
          className="text-white text-xs font-bold"
          ref={null}
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;

exports[`ProductCard > renders with an image URL > with-image-url 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "aspectRatio": 0.75,
        }
      }
    >
      <View
        cachePolicy="memory-disk"
        contentFit="cover"
        onError={[Function]}
        placeholder={
          {
            "blurhash": "L6PZfSi_.AyE_3t7t7R**0o#DgR4",
          }
        }
        ref={null}
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
        transition={300}
      >
        <Text
          testID="expo-image-uri"
        >
          https://cdn.example.com/product.jpg
        </Text>
      </View>
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;

exports[`ProductCard > renders with custom height and placeholder icon > custom-height-placeholder 1`] = `
<Pressable
  accessibilityRole="button"
  className="bg-white border border-lavender-200 rounded-[28px] flex-1"
  onPress={[Function]}
  ref={null}
  style={[Function]}
>
  <View
    className="rounded-[28px] overflow-hidden p-1.5 bg-white"
    ref={null}
  >
    <View
      className="w-full bg-lavender-100 rounded-[24px] overflow-hidden relative"
      ref={null}
      style={
        {
          "height": 144,
        }
      }
    >
      <View
        className="w-full h-full items-center justify-center bg-lavender-50"
        ref={null}
      >
        <Text
          className="text-heliotrope-400 text-3xl"
          ref={null}
        >
          👕
        </Text>
      </View>
      <View
        className="w-8 h-8 rounded-full bg-white/95 items-center justify-center absolute bottom-3 right-3 shadow-md border border-lavender-200"
        ref={null}
        style={
          {
            "elevation": 3,
          }
        }
      >
        <View
          fill="transparent"
          testID="lucide-Heart"
        >
          <Text
            style={
              {
                "color": "#231F48",
                "fontSize": 16,
              }
            }
          >
            Heart
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-2 pt-2.5 pb-1.5"
      ref={null}
    >
      <View
        ref={null}
      >
        <Text
          ref={null}
          testID="footer-text"
        >
          Category · Color
        </Text>
        <Text
          ref={null}
          testID="footer-price"
        >
          ₹1,999
        </Text>
      </View>
    </View>
  </View>
</Pressable>
`;
